Enhanced code structure of Dashboard component

--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -12,6 +12,9 @@
 
         <div class="button-group">
             <div ngbDropdown class="d-inline-block position-relative">
+                <!-- <button type="button" class="btn btn-primary d-flex align-items-center gap-2 shadow-sm" (click)="openModal()">
+                    <i class="fal fa-upload"></i> <span>Import</span> 
+                </button> -->
                 <button type="button" id="dropdownBasic1" ngbDropdownToggle
                     class="btn btn-primary d-flex align-items-center gap-2 shadow-sm">
                     <i class="fas fa-filter"></i> <span>Filter</span>
