--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<app-sidebar (onToggleSidebar)="onToggleSidebar($event)"></app-sidebar>
-<app-body [collapsed]="isSidebarCollapsed" [screenWidth]="screenWidth"></app-body>
+<router-outlet></router-outlet>
