--- a/src/app/layouts/main-layout/items/items.component.html
+++ b/src/app/layouts/main-layout/items/items.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid p-4 bg-dark rounded-3 min-vh-100">
     <div class="header">
-        <h1 class="fs-4 fw-bold text-warning mb-1">All Items</h1>
+        <h1 class="fs-4 fw-bold mb-1">All Items</h1>
         <p class="text-light fs-6 fw-medium mb-4">Detailed information on all items.</p>
     </div>
 
