--- a/src/app/layouts/main-layout/dashboard/dashboard.component.html
+++ b/src/app/layouts/main-layout/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="mb-4">
         <!-- Dashboard Header -->
         <header class="mb-4">
-            <h1 class="fs-4 fw-bold text-warning mb-1">Dashboard</h1>
+            <h1 class="title fs-4 fw-bold mb-1">Dashboard</h1>
             <p class="text-light fs-6 fw-medium mb-0">An overview of inventory, sales, and stock levels.</p>
         </header>
     </div>
@@ -151,7 +151,7 @@
             <div class="card h-75 shadow-sm border-0">
                 <div class="card-header bg-light py-3 d-flex justify-content-between align-items-center">
                     <h3 class="card-title fs-6 fw-medium text-primary mb-0">Low Stock Alerts</h3>
-                    <span *ngIf="!(isLoading$ | async)" class="badge bg-warning text-dark">Threshold: {{ threshold }}
+                    <span *ngIf="!(isLoading$ | async)" class="badge text-dark">Threshold: {{ threshold }}
                         units</span>
                 </div>
 
