--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="sidenav d-flex flex-column bg-dark position-fixed" [ngClass]="collapsed ? 'sidenav-collapsed' : ''">
     <div class="logo-container d-flex align-items-center p-3 mb-3">
         <!-- Logo Button -->
-        <button class="logo btn btn-warning text-black p-2" (click)="toggleCollapsed()">IM</button>
+        <button class="logo p-2" (click)="toggleCollapsed()">IM</button>
         <!-- Logo Text (Only Visible when Collapsed) -->
         <div class="logo-text ms-3 text-light fs-4 fw-bold" *ngIf="collapsed">IManager</div>
         <!-- Close Button -->
